[gd_scene load_steps=12 format=2]

[ext_resource path="res://textures/ui/button_round.png" type="Texture" id=1]
[ext_resource path="res://textures/ui/panel_bg.png" type="Texture" id=2]
[ext_resource path="res://textures/ui/button.png" type="Texture" id=3]
[ext_resource path="res://src/gui/qpanel/QuantityPanel.gd" type="Script" id=4]
[ext_resource path="res://textures/icons/more.png" type="Texture" id=5]
[ext_resource path="res://textures/icons/less.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 766, 203 )
margin_left = 36.0
margin_right = 36.0
margin_top = 36.0
margin_bottom = 36.0

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 67, 67 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 506, 55 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 506, 55 )
margin_left = 6.0
margin_right = 6.0
margin_top = 6.0
margin_bottom = 6.0

[node name="QuantityPanel" type="PanelContainer"]
margin_right = 362.0
margin_bottom = 290.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 362.0
margin_bottom = 290.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 362.0
margin_bottom = 290.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 352.0
margin_bottom = 280.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 342.0
margin_bottom = 133.0
mouse_filter = 2

[node name="Less" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_constants/hseparation = 0
text = "<"
expand_icon = true

[node name="TextureButton" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Less"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 88.0
margin_bottom = 26.0
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
align = 1
max_length = 3
caret_blink = true

[node name="More" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 116.0
margin_bottom = 26.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
custom_constants/hseparation = 0
text = ">"

[node name="TextureButton" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/More"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 342.0
margin_bottom = 163.0
mouse_filter = 2
alignment = 1

[node name="Accept" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 169.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "y"

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 173.0
margin_right = 342.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "n"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Less" to="." method="_on_Less_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/More" to="." method="_on_More_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Cancel" to="." method="_on_Cancel_pressed"]
